--- a/whac a mole/style.css
+++ b/whac a mole/style.css
@@ -1,6 +1,56 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+
+body {
+    width: 100vw;
+    height: 100vh;
+    max-width: 100vw;
+    min-height: 100vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.texts{
+    padding-top: 5rem;
+    width: 50%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    gap: 3rem;
+}
+
+.texts h1 {
+    margin-bottom: 3rem;
+    font-size: 4rem;
+}
+
+.score {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    font-size: 2rem;
+}
+
+.time {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    font-size: 2rem;
+}
+
+
 .grid {
-    width: 606px;
-    height: 606px;
+    width: 600px;
+    height: 600px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -12,5 +62,6 @@
 }
 
 .mole {
-    background-color: blue;
+    background-image: url("./mole.jpg");
+    background-size: cover;
 }
