--- a/card-app display/style.css
+++ b/card-app display/style.css
@@ -215,6 +215,56 @@ main, footer {
 
 
 /**
+* ? aubout page 
+*/
+.article-box {
+    width: 90vw;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 2rem;
+    border-radius: var(--border-radius);
+    overflow: hidden;
+}
+
+.article-detaille {
+    background-color: var(--secondary-color);
+    max-width: 55vw;
+    /* background-color: blue; */
+    display: flex;
+    flex-direction: column;
+}
+
+.article-detaille img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
+.article-body {
+    width: 100%;
+    padding: 1rem;
+}
+
+.article-detaille .title {
+    margin: 2rem;
+    margin-top: 0rem;
+    width: 100%;
+    text-align: center;
+}
+
+.article-text{
+    font-size: 1rem;
+    font-family: sans-serif;
+    line-height: 1.4rem;
+}
+
+.feddbacks {
+    background-color: red;
+    max-width: 30vw;
+}
+
+/**
 * ? meqdia queries  
 */
 
